force-app/main/default/objects/ServiceResourceSkill/ServiceResourceSkill.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>