force-app/main/default/objects/ServiceResourceSkill/fields/TECH_Num_Niveau_de_Competence__c.field-meta.xml
<CustomField>
    <fullName>TECH_Num_Niveau_de_Competence__c</fullName>
    <formula>TEXT(SkillLevel)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_Num_Niveau_de_Compétence</label>
    <type>Text</type>
</CustomField>