force-app/main/default/objects/ServiceResourceSkill/fields/Type_de_comp_tence__c.field-meta.xml
<CustomField>
    <fullName>Type_de_comp_tence__c</fullName>
    <label>Type de compétence</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Habilitation</fullName>
            </value>
            <value>
                <fullName>Compétence Technique</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>