force-app/main/default/objects/ServiceResourceSkill/validationRules/CompetenceRestreinteEntre0et4.validationRule-meta.xml
<ValidationRule>
    <fullName>CompetenceRestreinteEntre0et4</fullName>
    <active>true</active>
    <errorConditionFormula>OR 
		((SkillLevel &lt;= 0),(SkillLevel &gt; 4),
 		NOT(REGEX(TECH_Num_Niveau_de_Competence__c , &quot;[0-9]{1}&quot;)))</errorConditionFormula>
    <errorDisplayField>SkillLevel</errorDisplayField>
    <errorMessage>Vous devez saisir une valeur de nombre entier, située entre 0 et 4 pour définir un niveau de compétence.</errorMessage>
</ValidationRule>